lots of new design

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -4,7 +4,7 @@
 @import "bourbon/bourbon";
 @import "library/reset";
 @import "library/chrome";
-@import "library/frame";
+@import "library/header";
 @import "library/projects";
 @import "library/sections";
 @import "library/devices";
