article page animation beginnings

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -8,5 +8,6 @@
 @import "library/footer";
 @import "library/projects";
 @import "library/sections";
+@import "library/article";
 @import "library/devices";
 @import "library/current_project";
